--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,10 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.2'
+        classpath 'com.android.tools.build:gradle:4.0.1'
         classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
 //        classpath "io.realm:realm-gradle-plugin:2.2.1"
         classpath 'com.aragost.javahg:javahg:0.4'
@@ -17,6 +18,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        google()
         maven {
             url "https://oss.sonatype.org/content/repositories/snapshots/"
         }
